# mineclearer

./: Cargo.toml
resources/shaders/: shader.wgsl
src/: board.rs  camera.rs  component_resources.rs  main.rs  mine_clearer_scene.rs  mineclear_scene.rs  render_details.rs  ui_vertex.rs
src/components/: transform.rs
src/pipelines/: mod.rs  ui.rs
