[package]
name = "mineclearer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simplelog = "0.12"
grid = "0.10"
renderer = { git="https://github.com/PaulL48/renderer.git" }
application-context = { git="https://github.com/PaulL48/application_context.git" }
winit = "0.28"
wgpu = "0.15"
bevy_ecs = "0.11"
glam = "0.22"
once_cell = "1.18"